Arquivos_k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresspassgen
spec:
  rules:
  -  host: localhost
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: passgenapp
            port:
              number: 8080
